--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JUNJIE - Personal Website</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
 
 <nav class="navbar">
-    <a href="#">About</a>
-    <a href="#">Work</a>
-    <a href="#">Contact</a>
+    <a href="#about">About</a>
+    <a href="#work">Work</a>
+    <a href="#contact">Contact</a>
 </nav>
 
 <header class="hero">
     <div class="hero-text">Hey, I'm <span>JUNJIE</span></div>
 </header>
 
-<section class="intro">
-    <img src="images/profile.jpg" alt="你的名字" class="profile-pic">
+<section class="intro" id="about">
+    <img src="images/profile.jpg" alt="myself" class="profile-pic gallery-img">
     <h1>I am a full-stack web developer based in Melbourne Australia</h1>
     <p>——————————————</p>
 
@@ -27,14 +29,14 @@
 <section id="work" class="projects">
     <h2>Here's what I've done so far</h2>
     <div class="project">
-        <img class="pic" src="images/project_1.png" alt="项目1名称">
+        <img class="pic gallery-img" src="images/project_1.png" alt="project-1_volcano">
 
-        <p>project decriptions</p>
+        <p>project descriptions</p>
     </div>
     <div class="project">
-        <img class="pic" src="images/project_3.png" alt="项目2名称">
+        <img class="pic gallery-img" src="images/project_3.png" alt="project-2_mangrove">
 
-        <p>project decriptions</p>
+        <p>project descriptions</p>
     </div>
 
 </section>
@@ -42,14 +44,44 @@
     <p>——————————————</p>
     <h2>My Photos</h2>
     <div class="gallery-container">
-        <img class="pic1" src="images/gallery_1.jpeg" alt="照片描述1">
-        <img class="pic1" src="images/gallery_2.jpg" alt="照片描述2">
-        <img class="pic1" src="images/gallery_3.jpg" alt="照片描述3">
-        <img class="pic1" src="images/gallery_4.jpg" alt="照片描述4">
+
+        <img class="pic1 gallery-img" src="images/gallery_1.jpeg" alt="description_1">
+        <img class="pic1 gallery-img" src="images/gallery_2.jpg" alt="description_2">
+        <img class="pic1 gallery-img" src="images/gallery_3.jpg" alt="description_3">
+        <img class="pic1 gallery-img" src="images/gallery_4.jpg" alt="description_4">
 
     </div>
 </section>
 
+<footer class="footer" id="contact">
+    <p style="color: white">Contact: s225204972@deakin.edu.au | Phone: +61 402201872</p>
+</footer>
+
+
 <link rel="stylesheet" href="css/styles.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content bg-dark">
+            <div class="modal-body p-0 text-center">
+                <img id="modalImage" src="" class="img-fluid" alt="Enlarged Image">
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    const galleryImages = document.querySelectorAll('.gallery-img');
+    const modalImage = document.getElementById('modalImage');
+    const imageModal = new bootstrap.Modal(document.getElementById('imageModal'));
+
+    galleryImages.forEach(img => {
+        img.addEventListener('click', () => {
+            modalImage.src = img.src;
+            imageModal.show();
+        });
+    });
+</script>
+
 </body>
 </html>
